# metadiff

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  autodiff.h  autodiff.h~  documentation.config  doxy.txt  main.cpp  main.cpp~  operators.h  test  test.html
examples/: eigen.cpp  log_test.cpp  mnist.h  mnist_grad_check.cpp  mnist_hinton.cpp  mnist_hinton_e.cpp  mnist_hinton_optim.html  opt.cpp  regex.cpp  test.cpp  test_full.html  tt.cpp  tt.h  ttt1.cpp
examples/graphs/: mnist_hinton_optim.html
html_files/: dagre-d3.js  demo.css  graph.js  test.html
include/: api.h  autodiff.h  backends.h  core.h  core_impl.h  defs.h  exceptions.h  interface.h  logging.h  metadiff.h  operators.h  optimize.h  os.h  shared.h  symbolic.h  test.h  visual.h
include/backends/: arrayfire.h  base.h  eigen.h
include/operators/: abstract.h  base.h  constants.h  elementwise.h  elementwise_func.h  index.h  input.h  lin_algebra.h  logical.h  multy_node.h  optimized.h  shape.h
include/optimize/: optimizer.h
include/visualization/: dagre.h
src/: main.cpp
tests/: CMakeLists.txt  Makefile  cmake_install.cmake
tests/symbolic_tests/: CMakeLists.txt  Makefile  cmake_install.cmake  monomials.cpp  symbolic.cpp
